--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                              <font> </td>
                     <td align="center"> 
                         <font color="white"> 
-                            <strong><a href="facebook.com/doanee.lin"> Làng </a></strong>
+                            <strong><a href="https://www.facebook.com/Doanee.lin"> Làng </a></strong>
                               <font> </td>
                     </td>
                     <td align="center"> 
